# comfyui-PlyPreview

./: LICENSE  README.en.md  README.md  README.zh-CN.md  __init__.py  comfyui_extension.json  common.py  load_gaussian_ply.py  load_gaussian_ply_path.py  preview_gaussian.py  process_gaussian_ply.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
web/: viewer_gaussian.html
web/js/: gaussian_preview.js
