[project]
name = "comfyui-PlyPreview"
description = "Gaussian Splat PLY loader + preview nodes for ComfyUI. Forked from GeometryPack and repackaged to avoid upstream overwrites. Includes front-end viewer (gsplat.js) bundled locally."
version = "1.1.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["numpy>=1.23", "plyfile>=1.0.3"]

[project.urls]
Repository = "https://github.com/XuanYu-github/comfyui-PlyPreview"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/XuanYu-github/comfyui-PlyPreview/wiki"
"Bug Tracker" = "https://github.com/XuanYu-github/comfyui-PlyPreview/issues"

[tool.comfy]
PublisherId = "xuanyu"
DisplayName = "comfyui-PlyPreview"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

